# IntelliJIDEAUltimate

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  README.md  README_MSS.md  README_T1_react.md  docker-compose.override.yaml  docker-compose.yaml  k8s-pv-creation.yaml  k8s.yaml  on_image.drawio  on_registration.drawio  package-lock.json  package.json  project.drawio  todo.md  tsconfig.json  video_parte2.txt  webpack.config.js
apps/frontend/: package.json
apps/frontend-temp/: package-lock.json  package.json  styleguide.config.js  webpack.config.js
apps/login_test/: package-lock.json  package.json  server.js
apps/tela_login/: package.json
deprecated/EventBus/: package.json
diagrams/: on_image.drawio  on_logout.drawio
frontend/: package-lock.json
frontend-temp/: package-lock.json  package.json  setup_script  webpack.config.js
frontend-temp/public/: index.html
frontend-temp/scripts/: saida9.txt
frontend-temp/src/: App.tsx  declarations.d.ts
frontend_flutter/: pubspec.yaml
mss/: UpdateAllMss.sh  package-lock.json  thunder-collection_IntelliJ.json  todo.txt
mss/ai-service/: Dockerfile  inferencia.drawio  pyproject.toml
mss/ai-service/config/: settings.py
mss/ai-service/connection/: rabbitmq.py
mss/ai-service/consumers/: image_consumer.py
postgres_init/: Dockerfile  classificationdb_init.sql  imagedb_init.sql  registerdb_init.sql
public/: index.html
scripts/: listar_arquivos.sh  npm_login.sh  saida5.txt  saida7.txt
src/: App.tsx  declarations.d.ts  index.tsx
tela_login/: package-lock.json  package.json
(+401 files in other folders)
